
  [ Martti Pitkanen ]
  * New upstream version (4.0.3.0):
    - Update Finnish translation file.

  [ Jos Wolfram ]
  * New upstream version (4.0.3.0):
    - Update Dutch translation file.

  [ Robert Parts ]
  * New upstream version (4.0.3.0):
    - Add Estonian translation file.

  [ Klaus Ade Johnstad ]
  * New upstream version (4.0.3.0):
    - Update Bokmal (Norway) translation file.

 -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Thu, 10 Apr 2014 18:30:25 +0200

x2goclient (4.0.2.1-0x2go1) unstable; urgency=low

  [ Mike Gabriel ]
  * New upstream release (4.0.2.1):
    - Fix FTBFS on arm64 (and others) architecture. (Fixes: #498).
    - Only show session name in notification bubbles with debugging
      enabled. (Fixes: #364).
    - New command line option (--keep-trayicon). With that options set,
      we force X2Go client to only use the default "accelerated X" as
      system tray icon (and prohibit usage of the session's icon as
      tray icon). (Fixes: #365).
    - Provide more meaningful messages on SSH errors (host pub key not
      found, export pub key not found, authorized_keys file not found).
      For SSHd startup failures provide different messages on Windows
      and non-Windows machines. (Fixes: #235).
      FIXME: add detection code to report SSH daemon startup failures.
    - Add new cmdline option --hide-foldersharing. If used, all GUI
      elements related to exporting client-side folders to X2Go sessions
      get hidden. (Fixes: #514).
    - Update COPYING file (to update FSF address).
  * debian/control:
    + Add dbg:package x2goplugin-dbg.

  [ Clemens Lang ]
  * New upstream version (4.0.2.1):
    - Re-add Info.plist file (which got removed by accident in commit 91cf6c6).
      (Fixes: #502).

  [ Oleksandr Shneyder ]
  * New upstream release (4.0.2.1):
    - Hide GSSAPI options on direct RDP connections. (Fixes: #478).
    - Search X-Server in /Applications/Utilities/XQuartz.app on Mac.